# batool

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main_billiv105.yml
src/: main.py
